augusoft.net (archived on 2014-02-19)
{
  "alexa_rank": 126618,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 1718,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.52,
  "homepage_snapshot_redirected_domain": "augusoft.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140428120539id_/http://www.augusoft.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140428120539id_/http%3A//augusoft.net",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "augusoft.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140219063044id_/http%3A//www.augusoft.net/privacy-policy",
  "policy_title": "Privacy Policy | Augusoft",
  "policy_url": "augusoft.net/privacy-policy",
  "sha1": "669cc5c3d8018dfeee875ae5d3fe094eca416b8f",
  "simhash": 2502690101068916304,
  "simhash_updated": true,
  "site_hostname": "augusoft.net",
  "site_url": "http://augusoft.net",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20140219063044",
  "word_count": 269,
  "year": 2014
}

--- a/a/au/aug/augusoft.net.html
+++ b/a/au/aug/augusoft.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the augusoft.net privacy policy that was archived on 2013-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131213223910id_/http%3A//www.augusoft.net/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the augusoft.net privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219063044id_/http%3A//www.augusoft.net/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js flexbox canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" style=""><!--<![endif]--><head>
   <meta charset="utf-8">
@@ -153,7 +153,7 @@ function validateForm(event) {
 </div><div class="sf_field sf_field_city sf_type_text">	<label class="w2llabel text" for="sf_city">City:</label>
 	<input value="" id="sf_city" class="w2linput text" name="city" type="text">
 
-</div><div class="sf_field sf_field_state sf_type_select">	<label class="w2llabel select" for="sf_state">State: <sup><span class="required">*</span></sup></label>
+</div><div class="sf_field sf_field_state sf_type_select">	<label class="w2llabel select" for="sf_state">State:</label>
 	
 	<select id="sf_state" class="w2linput select" name="state"><option value="AL">Alabama</option>
 <option value="AK">Alaska</option>
@@ -214,7 +214,7 @@ function validateForm(event) {
 	<input value="" id="sf_phone" class="w2linput text" name="phone" type="text">
 
 </div><label class="w2llabel">Type the text shown: *</label><br>
-			<img class="w2limg" src="http://www.augusoft.net/wp-admin/admin-ajax.php?action=sfw2l_get_captcha&amp;_CAPTCHA=true&amp;t=0.25426400+1386974344&amp;hash=6b98f34a33b5b23a8b3585dcff9aa2a9974ec110" alt="CAPTCHA image"><br><input type="text" class="w2linput text" name="captcha_text" value=""><br><input type="hidden" class="w2linput hidden" name="captcha_hash" value="6b98f34a33b5b23a8b3585dcff9aa2a9974ec110">	<input type="text" name="message" class="w2linput" value="" style="display: none;">
+			<img class="w2limg" src="http://www.augusoft.net/wp-admin/admin-ajax.php?action=sfw2l_get_captcha&amp;_CAPTCHA=true&amp;t=0.98860100+1392791443&amp;hash=ca5856acaef48e35df240352e206c771811317ff" alt="CAPTCHA image"><br><input type="text" class="w2linput text" name="captcha_text" value=""><br><input type="hidden" class="w2linput hidden" name="captcha_hash" value="ca5856acaef48e35df240352e206c771811317ff">	<input type="text" name="message" class="w2linput" value="" style="display: none;">
 	<input type="hidden" name="form_id" class="w2linput" value="3">
 	<input type="hidden" id="Daddy_Analytics_Token" name="" class="w2linput" value="" style="display: none;">
 	<input type="hidden" id="Daddy_Analytics_WebForm_URL" name="" class="w2linput" value="" style="display: none;">
@@ -243,7 +243,7 @@ function validateForm(event) {
 </div><div class="sf_field sf_field_city sf_type_text">	<label class="w2llabel text" for="sf_city">City:</label>
 	<input value="" id="sf_city" class="w2linput text" name="city" type="text">
 
-</div><div class="sf_field sf_field_state sf_type_select">	<label class="w2llabel select" for="sf_state">State: <sup><span class="required">*</span></sup></label>
+</div><div class="sf_field sf_field_state sf_type_select">	<label class="w2llabel select" for="sf_state">State:</label>
 	
 	<select id="sf_state" class="w2linput select" name="state"><option value="AL">Alabama</option>
 <option value="AK">Alaska</option>
@@ -308,7 +308,7 @@ function validateForm(event) {
 	<textarea id="sf_description" class="w2linput textarea" name="description"></textarea>
 
 </div><label class="w2llabel">Type the text shown: *</label><br>
-			<img class="w2limg" src="http://www.augusoft.net/wp-admin/admin-ajax.php?action=sfw2l_get_captcha&amp;_CAPTCHA=true&amp;t=0.25986600+1386974344&amp;hash=6b98f34a33b5b23a8b3585dcff9aa2a9974ec110" alt="CAPTCHA image"><br><input type="text" class="w2linput text" name="captcha_text" value=""><br><input type="hidden" class="w2linput hidden" name="captcha_hash" value="6b98f34a33b5b23a8b3585dcff9aa2a9974ec110">	<input type="text" name="message" class="w2linput" value="" style="display: none;">
+			<img class="w2limg" src="http://www.augusoft.net/wp-admin/admin-ajax.php?action=sfw2l_get_captcha&amp;_CAPTCHA=true&amp;t=0.00171500+1392791444&amp;hash=03209dffcc843f4e3368342706461db72bf1d11e" alt="CAPTCHA image"><br><input type="text" class="w2linput text" name="captcha_text" value=""><br><input type="hidden" class="w2linput hidden" name="captcha_hash" value="03209dffcc843f4e3368342706461db72bf1d11e">	<input type="text" name="message" class="w2linput" value="" style="display: none;">
 	<input type="hidden" name="form_id" class="w2linput" value="4">
 	<input type="hidden" id="Daddy_Analytics_Token" name="" class="w2linput" value="" style="display: none;">
 	<input type="hidden" id="Daddy_Analytics_WebForm_URL" name="" class="w2linput" value="" style="display: none;">
@@ -343,18 +343,18 @@ function validateForm(event) {
 	<div class="container">
 		<div class="row">
 			<div class="span4 testimonial">
-													<p>“My staff and I cannot get used to coming into work after the weekend and seeing that we earned money without doing anything.”</p>
-					<small>- Cyndi Pardee, Riverside Community College</small>
+													<p>“One of our favorite features has been the intuitive interface that allows our coordinators to access much of the information they need without having to request the operations team to do so.”</p>
+					<small>- Bill Pence, Lord Fairfax Community College</small>
 							</div>
 			
 			<div class="span7 offset1">
 				<h2><span class="ico-list"></span> Recent Blog Posts</h2>
 				<ul>
-																											<li id="post-1775"><span>Dec 4</span> <a href="/5-tips-to-increase-continuing-education-unit-performance/" title="5 Tips To Increase Continuing Education Unit Performance">5 Tips To Increase Continuing Education Unit Performance</a></li>
-																	<li id="post-1745"><span>Oct 17</span> <a href="/proactive-customer-service-can-have-a-huge-impact-on-customer-experience-retention-and-loyalty-2/" title="Proactive Customer Service Can Have a Huge Impact on Customer Experience, Retention and Loyalty">Proactive Customer Service Can Have a Huge Impact on Customer Experience, Retention and Loyalty</a></li>
-																	<li id="post-1632"><span>Oct 7</span> <a href="/virginias-community-colleges/" title="Virginia’s Community Colleges Select Augusoft’s Lumens to Manage Workforce Noncredit and Continuing Education Program">Virginia’s Community Colleges Select Augusoft’s Lumens to Manage Workforce Noncredit and Continuing Education Program</a></li>
-																	<li id="post-1559"><span>Sep 6</span> <a href="/continuing-education-leaders-are-you-focused-on-the-future/" title="Continuing education leaders: Are you focused on the future?">Continuing education leaders: Are you focused on the future?</a></li>
-																	<li id="post-1510"><span>Jul 31</span> <a href="/the-lifetime-value-of-your-ce-students/" title="How to Determine the Lifetime Value of Your CE Students">How to Determine the Lifetime Value of Your CE Students</a></li>
+																											<li id="post-1833"><span>Feb 13</span> <a href="/the-best-resource-to-support-planning-in-your-ce-program/" title="The Best Resource to Support Planning in Your CE Program">The Best Resource to Support Planning in Your CE Program</a></li>
+																	<li id="post-1816"><span>Jan 30</span> <a href="/importanceofneedsassessments/" title="The Importance of Needs Assessments">The Importance of Needs Assessments</a></li>
+																	<li id="post-1800"><span>Jan 14</span> <a href="/being-the-best-ce-instructor/" title="Being The Best CE Instructor">Being The Best CE Instructor</a></li>
+																	<li id="post-1792"><span>Dec 16</span> <a href="/augusoft-honors-bill-pence-of-lord-fairfax-community-college-as-its-2013-customer-of-the-year/" title="Augusoft Honors Bill Pence of Lord Fairfax Community College as its 2013 “Customer of the Year”">Augusoft Honors Bill Pence of Lord Fairfax Community College as its 2013 “Customer of the Year”</a></li>
+																	<li id="post-1775"><span>Dec 4</span> <a href="/5-tips-to-increase-continuing-education-unit-performance/" title="5 Tips To Increase Continuing Education Unit Performance">5 Tips To Increase Continuing Education Unit Performance</a></li>
 														</ul>
 			</div>
 		</div>
@@ -376,7 +376,7 @@ Fax: (763) 331-8349<br>
 		</div></section><section class="widget-3 widget-last widget text-7 widget_text"><div class="widget-inner">			<div class="textwidget"><p><a class="btn btn-primary btn-large" data-target="#tryDemo" role="button" data-toggle="modal">Request Demo</a></p>
 </div>
 		</div></section>    	<div class="span12 credits">
-    		<p>Augusoft © 2013. All Rights Reserved <a class="ico" href="https://www.facebook.com/AugusoftLumens"><span class=" ico ico-facebook"></span></a> <a class="ico" href="https://twitter.com/AugusoftLumens"><span class="ico ico-twitter"></span></a> <a class="ico" href="http://www.linkedin.com/company/140807"><span class="ico ico-linkedin"></span></a></p>
+    		<p>Augusoft © 2014. All Rights Reserved <a class="ico" href="https://www.facebook.com/AugusoftLumens"><span class=" ico ico-facebook"></span></a> <a class="ico" href="https://twitter.com/AugusoftLumens"><span class="ico ico-twitter"></span></a> <a class="ico" href="http://www.linkedin.com/company/140807"><span class="ico ico-linkedin"></span></a></p>
     	</div>
 	</div>
   </div>
