--- a/y/ya/yal/yalwa.in.html
+++ b/y/ya/yal/yalwa.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yalwa.in privacy policy that was archived on 2013-08-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130817063508id_/http%3A//www.yalwa.in/info/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yalwa.in privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219120000id_/http%3A//www.yalwa.in/info/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><!--<![endif]--><head>
 		<meta charset="UTF-8">
@@ -19,31 +19,37 @@
 		<link rel="shortcut icon" href="http://static.yalwa.in/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="http://static.yalwa.in/favicon.ico" type="image/x-icon">
 		<link rel="canonical" href="http://www.yalwa.in/info/privacy/">
-		<link rel="stylesheet" href="http://static.yalwa.in/styles/15860_0814/main_yalwa.css" type="text/css">
-		<link rel="stylesheet" href="http://static.yalwa.in/styles/15860_0814/sprites_div_yalwa.css" type="text/css">
-		<link rel="stylesheet" href="http://static.yalwa.in/styles/15860_0814/sprites_flags.css" type="text/css">
-		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-		<script src="http://static.yalwa.in/js/15860_0814/basics.js"></script>
+		<link rel="stylesheet" href="http://static.yalwa.in/styles/19257_0218/main_yalwa.css" type="text/css">
+		<link rel="stylesheet" href="http://static.yalwa.in/styles/19257_0218/sprites_div_yalwa.css" type="text/css">
+		<link rel="stylesheet" href="http://static.yalwa.in/styles/19257_0218/sprites_flags.css" type="text/css">
+		<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>var yalwa = yalwa || { };yalwa.v = yalwa.v || { };yalwa.v.upid_key = 'yalwa';yalwa.v.is_mobile = false;yalwa.v.price_format = '#,##0.##';yalwa.v.muscula_logID = '';yalwa.v.markerSrc = 'http://static.yalwa.in/images/19257_0218/32/pin_red.png';</script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="http://static.yalwa.in/js/19257_0218/basics.js"></script>
 		<script>var myUrl = "http://www.yalwa.in/info/privacy/"</script>
 <!--[if lte IE 8]>
-		<link rel="stylesheet" href="http://static.yalwa.in/styles/15860_0814/common_msie.css">
+		<link rel="stylesheet" href="http://static.yalwa.in/styles/19257_0218/common_msie.css">
 <![endif]-->
-		<link rel="apple-touch-icon" href="http://static.yalwa.in/images/15860_0814/yalwa_iphone_old.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="http://static.yalwa.in/images/15860_0814/yalwa_ipad.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="http://static.yalwa.in/images/15860_0814/yalwa_iphone.png">
+		<link rel="apple-touch-icon" href="http://static.yalwa.in/images/19257_0218/yalwa_iphone_old.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="http://static.yalwa.in/images/19257_0218/yalwa_ipad.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="http://static.yalwa.in/images/19257_0218/yalwa_iphone.png">
 		<meta name="viewport" content="width=1024">
 
-<script type="text/javascript">
-// <![CDATA[
-var as_tracking_code = "";
+<script>var as_tracking_code = "";
 var _gaq = _gaq || [];
 _gaq.push(
 	['_setAccount', 'UA-2027383-3'],
-	['_setSiteSpeedSampleRate', '10'],
+	['_setCustomVar', 1, 'full vs mobile', 'full', 3],
+	['_setCustomVar', 2, 'level', 'global', 3],
+	['_setCustomVar', 3, 'pagetype', 'INFO', 3],
+	['_setCustomVar', 4, 'locale', 'global', 3],
+	['_setSiteSpeedSampleRate', 10],
 	['_trackPageview'],
 	['b._setAccount', 'UA-16150510-1'],
-	['b._trackPageview']
-);
+	['b._setCustomVar', 1, 'full vs mobile', 'full', 3],
+	['b._setCustomVar', 2, 'level', 'global', 3],
+	['b._setCustomVar', 3, 'pagetype', 'INFO', 3],
+	['b._setCustomVar', 4, 'locale', '3-global', 3],
+	['b._trackPageview']);
 (function() {
     var ga = document.createElement('script');
     ga.type = 'text/javascript';
@@ -52,12 +58,15 @@ _gaq.push(
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(ga, s);
 })();
-// ]]>
 </script>
 
+
 		<style type="text/css">
+		#h1_container {
+			left: 190px;
+		}
 		#logo_link > div {
-			background:url(http://static.yalwa.in/images/15860_0814/logo/Yalwa_200_hover_english.png) 0 0 no-repeat;
+			background:url(http://static.yalwa.in/images/19257_0218/logo/Yalwa_200_hover_english.png) 0 0 no-repeat;
 			width:180px;
 			height:70px
 		}
@@ -81,7 +90,7 @@ _gaq.push(
 						<div id="logo" itemscope="" itemtype="http://schema.org/ImageObject" itemprop="logo">
 								<a id="logo_link" href="http://www.yalwa.in/">
 										<div title="Free Business Directory India"></div>
-								<link itemprop="contentUrl" href="http://static.yalwa.in/images/15860_0814/logo/Yalwa_200.png">
+								<link itemprop="contentUrl" href="http://static.yalwa.in/images/19257_0218/logo/Yalwa_200.png">
 									</a>
 							</div>
 						<meta itemprop="name" content="Yalwa">
@@ -89,7 +98,6 @@ _gaq.push(
 					<meta itemprop="name" content="Yalwa GmbH">
 				</div>
 			</div>
-
 	
 <div id="middle">
 <div id="middle" style="padding:10px;">
@@ -192,12 +200,12 @@ _gaq.push(
 		
 		<li>
 			<h3>Responsible authority</h3>
-			<p>Questions regarding data privacy and protection should be addressed to <span id="my434157573"><a href="mailto:privacy@yalwa.in">privacy@yalwa.in</a></span>
+			<p>Questions regarding data privacy and protection should be addressed to <span id="my1194791379"><a href="mailto:privacy@yalwa.in">privacy@yalwa.in</a></span>
 <script type="text/javascript">
 // <![CDATA[
 {
-coded = "zbdtLHS@SLvjL.dN"
-key = "rRYqknl6ZScQjuTzb8P4fNvUJaH0G3A2IXixCKtghL1D7F5WEVdsoBMymew9Op"
+coded = "3s7y8LE@E8tM8.71"
+key = "3dUlzLHeCJFrK6O5kfVthGAPXvSs24RwZmaNxiq0oybungpMD98cB7jQYEIW1T"
 shift = coded.length
 link = ""
 for (i = 0; i < coded.length; i++) {
@@ -209,7 +217,7 @@ for (i = 0; i < coded.length; i++) {
 		link += (key.charAt(ltr))
 	}
 }
-document.getElementById("my434157573").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
+document.getElementById("my1194791379").innerHTML = "<a href='mailto:"+link+"'>"+link+"<\/a>";
 }
 //]]>
 </script></p>
@@ -266,8 +274,19 @@ document.getElementById("my434157573").innerHTML = "<a href='mailto:"+link+"'>"+
 		</li>
 	
 	
+			<li>
+			<a rel="nofollow" href="https://www.yalwa.com/info/api/?cid=3">Yalwa API</a>
+		</li>
+	
+			<li>
+			<a rel="nofollow" href="http://www.yalwa.in/info/partner/">Bulk Upload Listings</a>
+		</li>
 	
 	
+	
+			<li>
+			<a href="http://www.yalwa.in/post/">Add business entry</a>
+		</li>
 		</ul>
 
 
@@ -275,7 +294,7 @@ document.getElementById("my434157573").innerHTML = "<a href='mailto:"+link+"'>"+
 		<li class="intro">Stay connected</li>
 
 			<li>
-			<a target="_blank" href="http://www.facebook.com/Yalwa.Local.Internet.Company">Yalwa on Facebook</a>
+			<a target="_blank" href="https://www.facebook.com/Yalwa.Business.Directory">Yalwa on Facebook</a>
 		</li>
 
 		<li>
@@ -294,9 +313,9 @@ document.getElementById("my434157573").innerHTML = "<a href='mailto:"+link+"'>"+
 				<br>
 
 				<ul>
-					<li>Copyright © 2013 Yalwa™</li>
+					<li>Copyright © 2014 Yalwa™</li>
 						</ul>
-				<div class="fo" style="display:none">&nbsp;&nbsp;<i>sun4</i></div>
+				<div class="fo" style="display:none">&nbsp;&nbsp;<i>sun5</i></div>
 			</div>
 
 
@@ -305,14 +324,8 @@ document.getElementById("my434157573").innerHTML = "<a href='mailto:"+link+"'>"+
 	</div>
 
 	
-<script type="text/javascript">	var yalwa = yalwa || { };
-	yalwa.v = yalwa.v || { };
-	yalwa.v.upid_key = 'yalwa';
-	yalwa.v.is_mobile = false;
-				yalwa.v.price_format = '#,##0.##';
-	</script>
-<script src="http://static.yalwa.in/js/15860_0814/setup_favs/"></script>
-<script src="http://static.yalwa.in/js/15860_0814/setup_login/?aid="></script>
+<script src="http://static.yalwa.in/js/19257_0218/setup_favs/"></script>
+<script src="http://static.yalwa.in/js/19257_0218/setup_login/?aid="></script>
 
 
 
