--- a/c/cg/cgs/cgsociety.org.html
+++ b/c/cg/cgs/cgsociety.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cgsociety.org privacy policy that was archived on 2013-09-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130921134053id_/http%3A//www.cgsociety.org/index.php/CGSHome/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cgsociety.org privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219154554id_/http%3A//www.cgsociety.org/index.php/CGSHome/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -18,7 +18,7 @@
 <!--[if lt IE 9]>
    <script type='text/javascript' src='https://cgs_static.s3.amazonaws.com/js/common/html5shiv.js'></script>
 <![endif]-->
-<script type="text/javascript" src="/static/js/homepage.js"></script>
+
 	<link rel="alternate" type="application/rss+xml" title="CGNetworks RSS" href="http://www.cgsociety.org/index.php/CGSFeatures/featurerss">
 	<link href="http://www.cgsociety.org/favicon.ico" rel="shortcut icon">
 	<link rel="”image_src”" href="”http://www.cgsociety.org/static/image/logo.png”">
@@ -29,6 +29,7 @@
 	<script type="text/javascript" src="http://www.cgsociety.org/static/js/scrolltopcontrol.js"></script>
 	<script type="text/javascript" src="/static/js/simplegallery.jquery.js?t=20110927v1"></script>
 	<script src="http://www.cgsociety.org/static/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="/static/js/homepage.js"></script>
         <script type="text/javascript" src="http://www.cgsociety.org/static/js/ads.js"></script>
 	<!-- Piwik --> 
 <script type="text/javascript">
@@ -64,7 +65,7 @@ piwikTracker.enableLinkTracking();
 
 <link rel="stylesheet" type="text/css" href="https://www.cgsociety.org/static/css/reset.css">
 <link rel="stylesheet" href="https://s3.amazonaws.com/cgs_static/css/common/main-foothead.css">
-<link rel="stylesheet" href="https://s3.amazonaws.com/cgs_static/css/cgtod/cgtod-styles.css?rnd53">
+<link rel="stylesheet" href="https://s3.amazonaws.com/cgs_static/css/cgtod/cgtod-styles.css?rnd28">
 <link rel="stylesheet" href="https://s3.amazonaws.com/cgs_static/css/common/main-foothead.css">
  <link rel="stylesheet" type="text/css" href="https://www.cgsociety.org/static/css/reset.css">
 <script type="text/javascript" src="https://www.cgsociety.org/static/js/ads.js"></script>
@@ -128,7 +129,7 @@ piwikTracker.enableLinkTracking();
           <a href="//www.cgsociety.org/index.php/CGSFeatures/" class="">Features</a>
         </li>
         <li>
-          <a href="//forums.cgsociety.org/forumdisplay.php?f=3" class="">Galleries</a>
+          <a href="//galleries.cgsociety.org/" class="">Galleries</a>
         </li>
 
         <li>
@@ -346,7 +347,7 @@ a.async=true;a.type='text/javascript';b.parentNode.insertBefore(a,b)}, 1);</scri
       <div class="col-adapt span-adapt2">
         <div class="footer-description">
           <h4>The CGSociety</h4>
-          <p class="cgs-bottom-space">The CGSociety is the most respected and accessable global organization for creative digital artists. The CGS supports artists at every level by offering a range of services to connect, inform, educate and promote digital artists worldwide.</p>
+          <p class="cgs-bottom-space">The CGSociety is the most respected and accessible global organization for creative digital artists. The CGS supports artists at every level by offering a range of services to connect, inform, educate and promote digital artists worldwide.</p>
           <a href="http://www.cgsociety.org/index.php/CGSHome/about" class="btn btn-small cgs-btn-iradiated">MORE ABOUT US<span>&nbsp;</span></a>
         </div>
       </div>
@@ -378,7 +379,7 @@ a.async=true;a.type='text/javascript';b.parentNode.insertBefore(a,b)}, 1);</scri
               <a href="http://portfolio.cgsociety.org">CGPortfolio</a>
             </li>
             <li>
-              <a href="challenge.cgsociety.org">CGChallenge</a>
+              <a href="http://challenge.cgsociety.org">CGChallenge</a>
             </li>
             <li>
               <a href="http://forums.cgsociety.org">Forum</a>
@@ -393,7 +394,7 @@ a.async=true;a.type='text/javascript';b.parentNode.insertBefore(a,b)}, 1);</scri
           <h4>Discover<div class="cgs-shadow-box">&nbsp;</div></h4>
           <ul class="footer-list">
             <li>
-              <a href="http://forums.cgsociety.org/forumdisplay.php?f=3">Gallery</a>
+              <a href="http://galleries.cgsociety.org/">Galleries</a>
             </li>
             <li>
               <a href="http://www.cgsociety.org/index.php/CGSFeatures">CGFeatures</a>
@@ -488,7 +489,7 @@ a.async=true;a.type='text/javascript';b.parentNode.insertBefore(a,b)}, 1);</scri
       </div>
       <div class="col-adapt span-adapt6">
         <p>
-          © 2002-2013 | The CGSociety - All rights reserved. No part of this website may be reproduced unless for personal use without prior written permission from The CGSociety.
+          © 2002-2014 | The CGSociety - All rights reserved. No part of this website may be reproduced unless for personal use without prior written permission from The CGSociety.
         </p>
       </div>
     </div>
