articlestars.com (archived on 2014-02-19)
{
  "alexa_rank": 55742,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 16029,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.43,
  "homepage_snapshot_redirected_domain": "articlestars.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140226174737id_/http://www.articlestars.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140226174737id_/http%3A//articlestars.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "articlestars.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140219185417id_/http%3A//www.articlestars.com/page/1_Privacy-Policy.html",
  "policy_title": "Article Directory Submission | Submit Quality Original Articles - ArticleStars.Com",
  "policy_url": "articlestars.com/page/1_Privacy-Policy.html",
  "sha1": "009729f702765913ccb38e2bffd2e4466a24f347",
  "simhash": 9720582080199624867,
  "simhash_updated": false,
  "site_hostname": "articlestars.com",
  "site_url": "http://articlestars.com",
  "smog": 13.4,
  "strict_updated": false,
  "timestamp": "20140219185417",
  "word_count": 2487,
  "year": 2014
}

--- a/a/ar/art/articlestars.com.html
+++ b/a/ar/art/articlestars.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the articlestars.com privacy policy that was archived on 2013-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130601031224id_/http%3A//www.articlestars.com/page/1_Privacy-Policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the articlestars.com privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219185417id_/http%3A//www.articlestars.com/page/1_Privacy-Policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Article Directory Submission | Submit Quality Original Articles - ArticleStars.Com</title>
@@ -418,12 +418,13 @@
 <div id="footer">
 	<ul class="bottomMenu">
 		<li> <a href="http://www.articlestars.com/" rel="http://www.articlestars.com/"> Home </a> </li>
-		<li><a href="http://www.articlestars.com/page/1_Privacy-Policy.html">Privacy Policy</a></li><li><a href="http://www.articlestars.com/page/2_Terms-of-Services.html">Terms of Services</a></li><li><a href="http://www.articlestars.com/page/3_Submission-Guidelines.html">Submission Guidelines</a></li>	</ul>
+		<li><a href="http://www.articlestars.com/page/1_Privacy-Policy.html">Privacy Policy</a></li><li><a href="http://www.articlestars.com/page/2_Terms-of-Services.html">Terms of Services</a></li><li><a href="http://www.articlestars.com/page/3_Submission-Guidelines.html">Submission Guidelines</a></li> <a re;="nofollow" href="http://articlestars.com/forms/LinkRemovelRequest/linkremovel.php" target="_blank">Link Removel Request Form</a>
+	</ul>
 	<div id="copyright">
 		<div id="divRavontFooter">
 			<p>Powered by <a href="http://www.snoft.com/" target="_blank"> SNOFT </a> </p>
 		</div>
-		<p>Copyright © 2013 <a href="http://www.articlestars.com/" class="footerLink"> ArticleStars </a> &nbsp;All Rights reserved.</p>
+		<p>Copyright © 2014 <a href="http://www.articlestars.com/" class="footerLink"> ArticleStars </a> &nbsp;All Rights reserved.</p>
 	</div>
 </div>
 <!-- Start Open Web Analytics Tracker -->
@@ -444,8 +445,7 @@ owa_cmds.push(['trackDomStream']);
 }());
 //]]>
 </script>
-<!-- End Open Web Analytics Code -->
- 
+<!-- End Open Web Analytics Code --> 
 </div>
 </div>
 
