--- a/e/en/eng/engineerjobs.com.html
+++ b/e/en/eng/engineerjobs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the engineerjobs.com privacy policy that was archived on 2013-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131219183833id_/http%3A//www.engineerjobs.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the engineerjobs.com privacy policy that was archived on 2014-02-19.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140219222919id_/http%3A//www.engineerjobs.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="no-js" lang="en"><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -7,8 +7,9 @@
 <title>Privacy Statement | EngineerJobs.com</title>
 
 
-<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="http://img.engineerjobs.com/assets/js/vendor/custom.modernizr.js"></script>
-<link rel="stylesheet" href="http://img.engineerjobs.com/style-5.css">
+<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="http://img.engineerjobs.com/js/modernizr.js"></script>
+<link rel="stylesheet" href="http://img.engineerjobs.com/base-3.css">
+<link rel="stylesheet" href="http://img.engineerjobs.com/ej-8.css">
 <link rel="shortcut icon" href="http://img.engineerjobs.com/favicon.ico">
 <link rel="apple-touch-icon" href="http://img.engineerjobs.com/apple-touch-icon.png">
 
@@ -25,71 +26,70 @@
   })();
 </script>
 </head>
-<body>
+<body class="privacy">
 
 
-<div id="navigation">
-	<div class="row wide collapse">
-		<div class="navigation-links large-12 columns">
+<div id="navigation"><div class="row collapse"><nav class="top-bar" data-topbar="">
+	<ul class="title-area">
+		<li class="name"><a href="http://www.engineerjobs.com/" class="hide-on-print"><img src="http://img.engineerjobs.com/images/logo-menu.png" width="171" height="21" alt="EngineerJobs.com"></a><img src="http://img.engineerjobs.com/images/logo-print-bw.gif" class="print-only"></li>
+		<li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+	</ul>
 
-			<nav class="top-bar">
-				<ul class="title-area">
-					<li class="name"><a href="http://www.engineerjobs.com/" class="hide-on-print"><img src="http://img.engineerjobs.com/images/logo-menu.png" width="171" height="21" alt="EngineerJobs.com"></a><img src="http://img.engineerjobs.com/images/logo-print-bw.gif" class="print-only"></li>
-					<li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+	<section class="top-bar-section">
+		<ul class="left">
+			<li class="divider"></li>
+			<li class="has-dropdown"><a href="http://www.engineerjobs.com/">Engineers</a>
+				<ul class="dropdown">
+					<li><a href="http://www.engineerjobs.com/career-center/resume.php">Post/Edit Resume</a></li>
+					<li><a href="http://www.engineerjobs.com/career-center/job-alerts.php">Job Alerts</a></li>
+					<li><a href="http://www.engineerjobs.com/jobs/?e=i">Internships &amp; Co-ops</a></li>
+					<li><a href="http://www.engineerjobs.com/jobs/?e=e">Entry-Level Jobs</a></li>
+					<li><a href="http://www.engineerjobs.com/engineering-employers.php">Who's Hiring</a></li>
+					<li><a href="http://www.engineerjobs.com/magazine/guide-to-getting-an-engineering-job.htm">Find a Job Fast</a></li>
 				</ul>
+			</li>
+			<li class="divider"></li>
+			<li class="has-dropdown"><a href="http://www.engineerjobs.com/products-and-pricing.php">Employers</a>
+				<ul class="dropdown">
+					<li><a href="http://www.engineerjobs.com/products-and-pricing.php">Products &amp; Pricing</a></li>
+					<li><a href="http://www.engineerjobs.com/banner-advertising.php">Banner Advertising</a></li>
+					<li><a href="http://www.engineerjobs.com/submit_secure.php">Submit A Job</a></li>
+					<li><a href="http://www.engineerjobs.com/resumes/">Engineering Resumes</a></li>
+					<li class="bigdiv"><a href="http://www.engineerjobs.com/recruiting-center/my-jobs.php">My Jobs</a></li>
+					<li><a href="http://www.engineerjobs.com/recruiting-center/my-invoices.php">My Invoices</a></li>
+				</ul>
+			</li>
+			<li class="divider"></li>
+			<li class="has-dropdown"><a href="http://www.engineerjobs.com/magazine/">Magazine</a>
+				<ul class="dropdown">
+					<li><a href="http://www.engineerjobs.com/magazine/">Home</a></li>
+					<li><a href="http://www.engineerjobs.com/magazine/category/features">Features</a></li>
+					<li><a href="http://www.engineerjobs.com/magazine/category/career">Career</a></li>
+										<li><a href="http://www.engineerjobs.com/magazine/category/diversions">Diversions</a></li>
+				</ul>
+			</li>
+			<li class="divider"></li>
+			<li><a href="http://www.engineerjobs.com/contactus.php">Contact</a></li>
+			<li class="divider"></li>
+			<li class="social"><a href="http://twitter.com/EngineerJobs" title="EngineerJobs.com on Twitter"></a></li>
+			<li class="social"><a href="http://www.facebook.com/engineerjobscom" title="EngineerJobs.com on Facebook"></a></li>
+			<li class="social"><a href="http://www.linkedin.com/company/engineerjobs-com" title="EngineerJobs.com on LinkedIn"></a></li>
+			<li class="social"><a href="https://plus.google.com/115694744366275635599" title="EngineerJobs.com on Google+"></a></li>
+		</ul>
 
-				<section class="top-bar-section">
-					<ul class="left">
-						<li class="divider"></li>
-						<li class="has-dropdown"><a href="http://www.engineerjobs.com/">Engineers</a>
-							<ul class="dropdown">
-								<li><a href="http://www.engineerjobs.com/career-center/resume.php">Post/Edit Resume</a></li>
-								<li><a href="http://www.engineerjobs.com/career-center/job-alerts.php">Job Alerts</a></li>
-								<li><a href="http://www.engineerjobs.com/jobs/?e=i">Internships &amp; Co-ops</a></li>
-								<li><a href="http://www.engineerjobs.com/jobs/?e=e">Entry-Level Jobs</a></li>
-								<li><a href="http://www.engineerjobs.com/engineering-employers.php">Who's Hiring</a></li>
-								<li><a href="http://www.engineerjobs.com/find-a-job-fast.htm">Find a Job Fast</a></li>
-							</ul>
-						</li>
-						<li class="divider"></li>
-						<li class="has-dropdown"><a href="http://www.engineerjobs.com/products-and-pricing.php">Employers</a>
-							<ul class="dropdown">
-								<li><a href="http://www.engineerjobs.com/products-and-pricing.php">Products &amp; Pricing</a></li>
-								<li><a href="http://www.engineerjobs.com/submit_secure.php">Submit A Job</a></li>
-								<li><a href="http://www.engineerjobs.com/resumes/">Engineering Resumes</a></li>
-								<li class="bigdiv"><a href="http://www.engineerjobs.com/recruiting-center/my-jobs.php">My Jobs</a></li>
-								<li><a href="http://www.engineerjobs.com/recruiting-center/my-invoices.php">My Invoices</a></li>
-							</ul>
-						</li>
-						<li class="divider"></li>
-						<li><a href="http://www.engineerjobs.com/magazine/">Magazine</a></li>
-						<li class="divider"></li>
-						<li class="navigation-contact"><a href="http://www.engineerjobs.com/contactus.php">Contact</a></li>
-						<li class="divider"></li>
-						<li class="navigation-social-link twitter"><a href="http://twitter.com/EngineerJobs" title="EngineerJobs.com on Twitter"></a></li>
-						<li class="navigation-social-link facebook"><a href="http://www.facebook.com/engineerjobscom" title="EngineerJobs.com on Facebook"></a></li>
-						<li class="navigation-social-link linkedin"><a href="http://www.linkedin.com/company/engineerjobs-com" title="EngineerJobs.com on LinkedIn"></a></li>
-					</ul>
+		<ul class="user-account right">
+			<li class="has-dropdown"><a href="https://www.engineerjobs.com/login.php?goto=http%3A%2F%2Fwww.engineerjobs.com%2Fprivacy.html" id="user-account-menu-link"><i class="ss-icon">👤</i> &nbsp; Log In</a>
+			</li>
+		</ul>
+	</section>
 
-					<ul class="user-account right">
-						<li class="has-dropdown"><a href="http://www.engineerjobs.com/login.php?goto=http%3A%2F%2Fwww.engineerjobs.com%2Fprivacy.html"><i class="ss-icon">👤</i> Log In</a>
-						</li>
-					</ul>
-				</section>
-			</nav>
-
-		</div>
-	</div>
-</div>
+</nav></div></div>
 	
 	
-<div class="page-header large">
-	<div class="row">
-		<div class="large-12 columns">
-			<h1>Privacy Statement</h1>
-		</div>
-	</div>
-</div>
+
+<div class="row"><div class="medium-12 columns">
+	<h1>Privacy Statement</h1>
+</div></div>
 
 <div class="row margin-bottom">
 	<div class="large-8 columns small-11 small-centered">
@@ -102,26 +102,23 @@
 
 <div id="footer">
 	<div class="row wide">
-		<div class="large-6 columns">
-			<ul class="footer-links">
-				<li class="footer-link"><a href="http://www.engineerjobs.com/contactus.php">Contact Us</a></li>
-				<li class="footer-link"><a href="http://www.engineerjobs.com/privacy.html">Privacy Policy</a></li>
+		<div class="medium-6 columns">
+			<ul>
+				<li><a href="http://www.engineerjobs.com/contactus.php">Contact Us</a></li>
+				<li><a href="http://www.engineerjobs.com/privacy.html">Privacy Policy</a></li>
 			</ul>
 		</div>
-		<div class="large-6 columns">
-			<p class="copyright">© 1996-2013 Engineering Jobs, LLC</p>
+		<div class="medium-6 columns">
+			<p class="copyright">© 1996-2014 Engineering Jobs, LLC</p>
 		</div>
 	</div>
 </div>
-<script type="text/javascript" src="http://img.engineerjobs.com/assets/js/vendor/jquery.js"></script>
-<script type="text/javascript" src="http://img.engineerjobs.com/assets/js/foundation/foundation.js"></script>
-<script type="text/javascript" src="http://img.engineerjobs.com/assets/js/foundation/foundation.topbar.js"></script>
-<script type="text/javascript" src="http://img.engineerjobs.com/assets/js/foundation/foundation.tooltips.js"></script>
-<script type="text/javascript" src="http://img.engineerjobs.com/assets/js/vendor/masonry.pkgd.min.js"></script>
-<script type="text/javascript" src="http://img.engineerjobs.com/assets/js/vendor/jquery.slimscroll.min.js"></script>
+
+<script src="http://img.engineerjobs.com/js/jquery.js"></script>
+<script src="http://img.engineerjobs.com/js/foundation.min.js"></script>
+<script type="text/javascript" src="http://img.engineerjobs.com/js/vendor/masonry.pkgd.min.js"></script>
 <script type="text/javascript">
 $(document).foundation();
-
 var $container = $("#stack");
 
 function triggerGrid() {
@@ -137,23 +134,8 @@ function triggerGrid() {
 	});
 }
 
-triggerGrid();
-
 $(window).resize(function(){
 	triggerGrid();
-});
-
-$(".search-results-filters-location").slimScroll({
-	height: '250px',
-	alwaysVisible: true
-});
-$(".search-results-filters-discipline").slimScroll({
-	height: '250px',
-	alwaysVisible: true
-});
-
-$(".job-listing-related-item[data-href], .search-results-list-item[data-href]").click(function(){
-	window.location = $(this).data("href");
 });
 </script>
 
