--- a/s/se/sei/seic.com.html
+++ b/s/se/sei/seic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the seic.com privacy policy that was archived on 2013-10-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131030160532id_/http%3A//www.seic.com/enUS/93.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the seic.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220023814id_/http%3A//seic.com/enUS/93.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="ENU js" xmlns="http://www.w3.org/1999/xhtml"><!--<![endif]--><head><!-- PageID 93 - published by Open Text Web Solutions 10.1 - 10.1.2.358 - 36551 -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -41,7 +41,7 @@
 
     <meta name="keywords" content="">
     <meta name="description" content="This privacy policy applies to data collected on SEI Web Properties that doesn't require account authentication or submittal of/access to confidential account information. ">
-    <meta name="revised" content="10/28/2013 10:45:02 AM">
+    <meta name="revised" content="2/6/2014 4:57:12 PM">
 
  
 
@@ -96,7 +96,7 @@
 
 <div id="mobileNav" style="display:none;">
     <a href="/enUS/index.htm" id="mobileHomeLink" onclick="s_objectID=&quot;https://web.archive.org/enUS/index.htm_2&quot;;return this.s_oc?this.s_oc(e):true">Home</a>
-    <a href="" id="mobileNavLink" onclick="s_objectID=&quot;https://web.archive.org/web/20131030160532id_/http%3A//www.seic.com/enUS/93.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Navigation</a>
+    <a href="" id="mobileNavLink" onclick="s_objectID=&quot;https://web.archive.org/web/20140220023814id_/http%3A//seic.com/enUS/93.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Navigation</a>
 </div>
 
             
@@ -105,7 +105,7 @@
             
        <div id="hdr-inner-wrapper">
                 <ul id="main-nav">
-                    <li class="no-hover"><a href="#" onclick="s_objectID=&quot;https://web.archive.org/web/20131030160532id_/http%3A//www.seic.com/enUS/93.htm#_1&quot;;return this.s_oc?this.s_oc(e):true">Services For</a></li>
+                    <li class="no-hover"><a href="#" onclick="s_objectID=&quot;https://web.archive.org/web/20140220023814id_/http%3A//seic.com/enUS/93.htm#_1&quot;;return this.s_oc?this.s_oc(e):true">Services For</a></li>
                     <li><a href="/enUS/144.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/144.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Knowledge Center</a>
                         <div class="menu-kc">
                             <div class="menu-top">
@@ -117,9 +117,9 @@
 <label>
     Knowledge Center</label>
 <ul>
-    <li><a href="/enUS/about/12760.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/about/12760.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Poll Results: Nonprofit Governance</a></li>
-    <li><a href="/enUS/about/12831.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/about/12831.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Third Quarter 2013 Market/Performance Update</a></li>
-    <li><a href="/enUS/about/12772.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/about/12772.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Webinar: Client Advisory Boards</a></li>
+    <li><a href="/enUS/about/13158.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/about/13158.htm_1&quot;;return this.s_oc?this.s_oc(e):true"> Advisors: What's Your Formula for Growth?</a></li>
+    <li><a href="/enUS/about/13249.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/about/13249.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Understanding AIFMD</a></li>
+    <li><a href="/enUS/about/13286.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/about/13286.htm_1&quot;;return this.s_oc?this.s_oc(e):true">2014 Economic Outlook</a></li>
 </ul>
 <a href="/enUS/about/270.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/about/270.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Knowledge Center Archive</a>                                        
                         </div> 
@@ -128,7 +128,7 @@
                 </ul>
                 <ul id="utility">
                     <li><a href="/enUS/623.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/623.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Help for Clients</a></li>
-                    <li id="region-picker"><a href="#" onclick="s_objectID=&quot;https://web.archive.org/web/20131030160532id_/http%3A//www.seic.com/enUS/93.htm#_2&quot;;return this.s_oc?this.s_oc(e):true">United States</a>
+                    <li id="region-picker"><a href="#" onclick="s_objectID=&quot;https://web.archive.org/web/20140220023814id_/http%3A//seic.com/enUS/93.htm#_2&quot;;return this.s_oc?this.s_oc(e):true">United States</a>
                         <div>
                             <ul>
                                 <li><a href="/enUS/index.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/index.htm_3&quot;;return this.s_oc?this.s_oc(e):true">United States - EN</a></li>
@@ -362,7 +362,7 @@
         </div>
         <ul class="nav">
             <li><a href="/enUS/1318.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/1318.htm_2&quot;;return this.s_oc?this.s_oc(e):true">Terms of Use</a></li><li><a href="/enUS/93.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/93.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Privacy Policy</a></li><li><a href="/enUS/94.htm" onclick="s_objectID=&quot;https://web.archive.org/enUS/94.htm_1&quot;;return this.s_oc?this.s_oc(e):true">Sitemap</a></li>
-            <li>© 2009-2013 SEI</li>
+            <li>© 2009-2014 SEI</li>
         </ul>
         <ul class="contact-us">
             <li><a href="/enUS/contact-us.aspx" class="button" onclick="s_objectID=&quot;https://web.archive.org/enUS/contact-us.aspx_2&quot;;return this.s_oc?this.s_oc(e):true">Contact Us</a></li>
@@ -450,7 +450,7 @@ $("area[href*='cvent']").click(function(){
     /8495.css
 -->
 
-<!-- CC(Foundation) Published(10/28/2013 10:45:02 AM) -->
+<!-- CC(Foundation) Published(2/6/2014 4:57:12 PM) -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
