--- a/h/ha/hai/hairfinder.com.html
+++ b/h/ha/hai/hairfinder.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hairfinder.com privacy policy that was archived on 2013-10-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131012091335id_/http%3A//www.hairfinder.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hairfinder.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220033625id_/http%3A//hairfinder.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy</title>
