--- a/g/gs/gsn/gsniper2.com.html
+++ b/g/gs/gsn/gsniper2.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gsniper2.com privacy policy that was archived on 2013-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222205502id_/http%3A//gsniper2.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gsniper2.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220044547id_/http%3A//gsniper.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -35,20 +35,16 @@
 </script>
 
 </head>
-<!--Website Design by Plusminisites.com-->
+
 <body>
-<!-- ClickTale Top part -->
-<script type="text/javascript">
-var WRInitTime=(new Date()).getTime();
-</script>
-<!-- ClickTale end of Top part -->
+
 <div id="contentbg">
   <div id="contentbg2">
     <div id="header">
       
         <p align="center" class="line1 style1">&nbsp;</p>
         <div id="salesletter">
-        <p><a href="http://gsniper2.com">Click Here To Go Back To The Main Presentation</a></p>
+        <p><a href="http://gsniper.com">Click Here To Go Back To The Main Presentation</a></p>
           <div style="text-align: center;"><big><big><span style="font-weight: bold;">PRIVACY POLICY</span><br>
           </big></big></div>
           <br>
@@ -212,20 +208,6 @@ as to the correctness of any of the statements made by Google Sniper 2 in the ma
 </div>
 <div id="footerbg">
 <div id="footer"></div>  </div>
- <!-- ClickTale Bottom part -->
-<div id="ClickTaleDiv" style="display: none;"></div>
-<script type="text/javascript">
-document.write(unescape("%3Cscript%20src='"+
- (document.location.protocol=='https:'?
-  'https://clicktale.pantherssl.com/':
-  'http://s.clicktale.net/')+
- "WRc9.js'%20type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://clicktale.pantherssl.com/WRc9.js" type="text/javascript"></script>
-<script type="text/javascript">
-var ClickTaleSSL=1;
-if(typeof ClickTale=='function') ClickTale(23299,1,"www02");
-</script>
-<!-- ClickTale end of Bottom part -->
 
 
 </body></html>
