e-cantonfair.com (archived on 2014-02-20)
{
  "alexa_rank": 270400,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 11170,
  "classifier_probability": 0.92,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.8,
  "homepage_snapshot_redirected_domain": "e-cantonfair.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140408035513id_/http://www.e-cantonfair.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140408035513id_/http%3A//e-cantonfair.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "e-cantonfair.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140220055618id_/http%3A//www.e-cantonfair.com/en/privacypolicy.html",
  "policy_title": "Privacy Policy",
  "policy_url": "e-cantonfair.com/en/privacypolicy.html",
  "sha1": "5829072d10c32086590b72447853f1ce66a53c44",
  "simhash": 4771715949121902719,
  "simhash_updated": false,
  "site_hostname": "e-cantonfair.com",
  "site_url": "http://e-cantonfair.com",
  "smog": 17.66,
  "strict_updated": false,
  "timestamp": "20140220055618",
  "word_count": 1743,
  "year": 2014
}

--- a/e/e-/e-c/e-cantonfair.com.html
+++ b/e/e-/e-c/e-cantonfair.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the e-cantonfair.com privacy policy that was archived on 2013-08-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130825222758id_/http%3A//www.e-cantonfair.com/en/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the e-cantonfair.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220055618id_/http%3A//www.e-cantonfair.com/en/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="zh-cn"><head>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -15,6 +15,9 @@
 	<div class="cont">
 		<h1><a href="../index.html">e-Cantonfair</a><span class="beta"></span></h1>
 		<ul class="menu">
+                    <li>
+                        <a href="/leadexpress.html" target="_blank" class="buyinglead-link">LeadEXpress<sup>NEW!</sup></a>
+                    </li>
 			<li>
 				<a href="../login.html" target="_blank" title="Temporarily not accessible for publics.">Sign in</a>·<a href="courtesy_tips.html" target="_blank" class="register" title="Temporarily not accessible for publics.">Sign up</a>
 			</li>
@@ -135,8 +138,8 @@
             <div class="seller-services-center" style="font-family: 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;">
             	<h3>中国站</h3>
                  <ul>
-                	<li><a href="http://zh.e-cantonfair.com/supplier.html">供应商服务中心</a></li>
-                    <li><a href="http://zh.e-cantonfair.com/about.html">关于广电商</a></li>
+                	<li><a href="http://zh.e-cantonfair.com/supplier">供应商服务中心</a></li>
+                    <li><a href="http://zh.e-cantonfair.com/about">关于广电商</a></li>
                 </ul>
             </div>
         </div>
