onlyeducation.com (archived on 2014-02-20)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 11891,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.28,
  "homepage_snapshot_redirected_domain": "onlyeducation.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140403124612id_/http://onlyeducation.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140403124612id_/http%3A//onlyeducation.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "onlyeducation.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140220080642id_/http%3A//onlyeducation.com/privacy.asp",
  "policy_title": "only Education",
  "policy_url": "onlyeducation.com/privacy.asp",
  "sha1": "63190cbc34c54e5b641078af549c4022357c69ce",
  "simhash": 10109331821874525868,
  "simhash_updated": false,
  "site_hostname": "onlyeducation.com",
  "site_url": "http://onlyeducation.com",
  "smog": 14.12,
  "strict_updated": false,
  "timestamp": "20140220080642",
  "word_count": 1894,
  "year": 2014
}

--- a/o/on/onl/onlyeducation.com.html
+++ b/o/on/onl/onlyeducation.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the onlyeducation.com privacy policy that was archived on 2013-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131219103121id_/http%3A//onlyeducation.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onlyeducation.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220080642id_/http%3A//onlyeducation.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>only Education</title>
 <link href="style1.css" rel="stylesheet" type="text/css">
-<script language="javascript" type="text/javascript">
+<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script language="javascript" type="text/javascript">
 var currentID = "school_0";
 var currentIndex = 0;
 var logoUrls = new Array();
@@ -1917,17 +1917,31 @@ function showOther(myID, increment)
 	}catch(ex){}
 }
 </script>
-<!-- Start Quantcast tag -->
+<!-- Quantcast Tag -->
 <script type="text/javascript">
-_qoptions={
-qacct:"p-4992UYfm_J1gY"
-};
+var _qevents = _qevents || [];
+
+(function() {
+var elem = document.createElement('script');
+elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+elem.async = true;
+elem.type = "text/javascript";
+var scpt = document.getElementsByTagName('script')[0];
+scpt.parentNode.insertBefore(elem, scpt);
+})();
+
+_qevents.push({
+qacct:"p-jdejrr_U2Sm_9"
+});
 </script>
-<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+
 <noscript>
-<img src="http://pixel.quantserve.com/pixel/p-4992UYfm_J1gY.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+<div style="display:none;">
+<img src="//pixel.quantserve.com/pixel/p-jdejrr_U2Sm_9.gif" border="0" height="1" width="1" alt="Quantcast"/>
+</div>
 </noscript>
 <!-- End Quantcast tag -->
+
 
 
 </body></html>
