--- a/1/10/100/1000waystocheat.com.html
+++ b/1/10/100/1000waystocheat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 1000waystocheat.com privacy policy that was archived on 2013-11-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131104133350id_/http%3A//www.1000waystocheat.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 1000waystocheat.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220082117id_/http%3A//1000waystocheat.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>1,000 Ways to Cheat - Privacy Policy</title>
