mp3uncle.com (archived on 2014-02-20)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 2898,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.41,
  "homepage_snapshot_redirected_domain": "mp3uncle.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140220113251id_/http://www.mp3uncle.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140220113251id_/http%3A//mp3uncle.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mp3uncle.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140220120430id_/http%3A//www.mp3uncle.com/privacy-policy",
  "policy_title": "Privacy Policy - Mp3uncle.com",
  "policy_url": "mp3uncle.com/privacy-policy",
  "sha1": "5039b1ed5d4d2a4ef5a13e8b48aba9cf6dcac65c",
  "simhash": 10707827749309692762,
  "simhash_updated": false,
  "site_hostname": "mp3uncle.com",
  "site_url": "http://mp3uncle.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140220120430",
  "word_count": 469,
  "year": 2014
}

--- a/m/mp/mp3/mp3uncle.com.html
+++ b/m/mp/mp3/mp3uncle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mp3uncle.com privacy policy that was archived on 2013-10-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131013124616id_/http%3A//www.mp3uncle.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mp3uncle.com privacy policy that was archived on 2014-02-20.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140220120430id_/http%3A//www.mp3uncle.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><!--<![endif]--><head profile="http://gmpg.org/xfn/11">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -103,16 +103,16 @@ www.dudemp3.com does use cookies to store information about visitors preferences
             <div class="widget_content">
                 <div class="textwidget">
 <p>
-<span><a href="/term/soo-daa">Soo Daa</a></span><br>
-<span><a href="/term/exo-do-cry">Exo Do Cry</a></span><br>
-<span><a href="/term/songs-of-film-joonon-music-vanraj-bhatia">Songs Of Film Joonon Music Vanraj Bhatia</a></span><br>
-<span><a href="/term/marqez-bradley">Marqez Bradley</a></span><br>
-<span><a href="/term/suju-from-u-mirror-dance-ver">Suju From U Mirror Dance Ver</a></span><br>
-<span><a href="/term/m-blaq-smooky-girl">M BLAQ SMOOKY GIRL</a></span><br>
-<span><a href="/term/de-darshan-guru-merebabagurinder-singh-jis-voice">De Darshan Guru MereBabaGurinder Singh Jis Voice</a></span><br>
-<span><a href="/term/john-newman-love-me-again"> John Newman Love Me Again </a></span><br>
-<span><a href="/term/top-of-the-pops-20132012-hd-video-top-130-songs-of-billboard">Top Of The Pops 20132012 HD VIDEO Top 130 Songs Of Billboard  P</a></span><br>
-<span><a href="/term/songs-of-film-mandi-music-vanraj-bhatia">Songs Of Film Mandi Music Vanraj Bhatia</a></span><br>
+<span><a href="/term/paul-f-cowlan">Paul F Cowlan</a></span><br>
+<span><a href="/term/eunhyuk-injection">Eunhyuk Injection</a></span><br>
+<span><a href="/term/deewana-chhora-gujjar-ka">Deewana Chhora Gujjar Ka</a></span><br>
+<span><a href="/term/capricorn-walking">Capricorn Walking</a></span><br>
+<span><a href="/term/cat-and-mouse-the-red-jumpsuit-apparatus">Cat And Mouse The Red Jumpsuit Apparatus</a></span><br>
+<span><a href="/term/capricorn">Capricorn</a></span><br>
+<span><a href="/term/stellar-marionete">Stellar Marionete</a></span><br>
+<span><a href="/term/mai-pyar-to-vadh-tenu-pyar-kara">Mai Pyar To Vadh Tenu Pyar Kara </a></span><br>
+<span><a href="/term/martin-garrix-firebeatz-helicopter">Martin Garrix  Firebeatz  Helicopter </a></span><br>
+<span><a href="/term/spica-you-dont-live-me">Spica You Dont Live Me</a></span><br>
  </p>
 			   </div>
             </div>
@@ -121,7 +121,6 @@ www.dudemp3.com does use cookies to store information about visitors preferences
             <h2 class="widget_title">Trending:</h2>
             <div class="widget_content">
                 <div class="textwidget">              
-Best Music Place 
 			   </div>
             </div>
         
@@ -139,59 +138,59 @@ Best Music Place
 <!-- END TAG --></center>
 <div id="footer">
 <div id="king">
-<div class="ftags"><input type="hidden" name="IL_IN_TAG" value="4"></div>
+<div class="ftags"><input type="hidden" name="IL_IN_TAG" value="2"></div>
 <div class="ftags">
 <span class="title">Recent Searches</span>
-<p>&nbsp;<span><a href="/term/soo-daa">Soo Daa</a></span> 
-&nbsp;<span><a href="/term/exo-do-cry">Exo Do Cry</a></span> 
-&nbsp;<span><a href="/term/songs-of-film-joonon-music-vanraj-bhatia">Songs Of Film Joonon Music Vanraj Bhatia</a></span> 
-&nbsp;<span><a href="/term/marqez-bradley">Marqez Bradley</a></span> 
-&nbsp;<span><a href="/term/suju-from-u-mirror-dance-ver">Suju From U Mirror Dance Ver</a></span> 
-&nbsp;<span><a href="/term/m-blaq-smooky-girl">M BLAQ SMOOKY GIRL</a></span> 
-&nbsp;<span><a href="/term/de-darshan-guru-merebabagurinder-singh-jis-voice">De Darshan Guru MereBabaGurinder Singh Jis Voice</a></span> 
-&nbsp;<span><a href="/term/john-newman-love-me-again"> John Newman Love Me Again </a></span> 
-&nbsp;<span><a href="/term/top-of-the-pops-20132012-hd-video-top-130-songs-of-billboard">Top Of The Pops 20132012 HD VIDEO Top 130 Songs Of Billboard  P</a></span> 
-&nbsp;<span><a href="/term/songs-of-film-mandi-music-vanraj-bhatia">Songs Of Film Mandi Music Vanraj Bhatia</a></span> 
-&nbsp;<span><a href="/term/roayls">Roayls</a></span> 
-&nbsp;<span><a href="/term/durga-song">Durga Song</a></span> 
-&nbsp;<span><a href="/term/big-bang-behind-the-scenes">Big Bang Behind The Scenes</a></span> 
-&nbsp;<span><a href="/term/songs-of-film-bhumika-music-vanraj-bhatia">Songs Of Film Bhumika Music Vanraj Bhatia</a></span> 
-&nbsp;<span><a href="/term/miley-cyrus-we-cant-stop-cover">Miley Cyrus  We Cant Stop Cover</a></span> 
-&nbsp;<span><a href="/term/na-tum-jaano-na-hum-full-song-kaho-naapyaar-hai">Na Tum Jaano Na Hum Full Song  Kaho NaaPyaar Hai </a></span> 
-&nbsp;<span><a href="/term/snsd-ft-super-junior">Snsd Ft Super Junior</a></span> 
-&nbsp;<span><a href="/term/ding-dong-bellu">Ding Dong Bellu</a></span> 
-&nbsp;<span><a href="/term/gdragon-funny-moments">Gdragon Funny Moments</a></span> 
-&nbsp;<span><a href="/term/lakshmi-saraswathi-stotram">Lakshmi Saraswathi Stotram</a></span> 
-&nbsp;<span><a href="/term/kasu-panam-dhuddu">Kasu Panam Dhuddu</a></span> 
-&nbsp;<span><a href="/term/mamta-mayee-ma">Mamta Mayee Ma</a></span> 
-&nbsp;<span><a href="/term/lakshmi">Lakshmi</a></span> 
-&nbsp;<span><a href="/term/mamta-mai-ma">Mamta Mai Ma</a></span> 
-&nbsp;<span><a href="/term/as-moat-pa-aayi-aashiqui-song">As  Moat Pa Aayi Aashiqui Song</a></span> 
-&nbsp;<span><a href="/term/tinh-yu-cach-tr-karaoke">Tinh Yu Cach Tr Karaoke </a></span> 
-&nbsp;<span><a href="/term/pray-pannuven">Pray Pannuven</a></span> 
-&nbsp;<span><a href="/term/nagada-sung-dhol-baje">Nagada Sung Dhol Baje</a></span> 
-&nbsp;<span><a href="/term/kim-yerim-alright">KIM YERIM ALRIGHT</a></span> 
-&nbsp;<span><a href="/term/big-bang-1-night-and-2-days">Big Bang 1 Night And 2 Days</a></span> 
-&nbsp;<span><a href="/term/sparsh">Sparsh</a></span> 
-&nbsp;<span><a href="/term/annie-ruth">Annie Ruth</a></span> 
-&nbsp;<span><a href="/term/mahisasura-maridini-stotram-part-ii">Mahisasura Maridini Stotram Part Ii</a></span> 
-&nbsp;<span><a href="/term/exo-peterpan-mv">Exo Peterpan Mv</a></span> 
-&nbsp;<span><a href="/term/kris-lawrence-ikaw-pala">Kris Lawrence Ikaw Pala</a></span> 
-&nbsp;<span><a href="/term/john-cena-car">John Cena Car</a></span> 
-&nbsp;<span><a href="/term/shahrukh-khans-top-20-songs-chir17">Shahrukh Khans Top 20 Songs ChiR17 </a></span> 
-&nbsp;<span><a href="/term/mashiro-iro-symphony-ed">Mashiro Iro Symphony Ed</a></span> 
-&nbsp;<span><a href="/term/fx-pinocia">Fx Pinocia</a></span> 
-&nbsp;<span><a href="/term/1hour-epic-music-gods-mp3-player-gets-stolen">1Hour Epic Music  Gods MP3 Player Gets Stolen</a></span> 
-&nbsp;<span><a href="/term/funny-video-in-besharam-song">Funny Video In Besharam Song</a></span> 
-&nbsp;<span><a href="/term/131011-exo">131011 Exo</a></span> 
-&nbsp;<span><a href="/term/we-cant-stop-official-video">We Cant Stop Official Video</a></span> 
-&nbsp;<span><a href="/term/sherawali-ma-nu-maniya">Sherawali Ma Nu Maniya</a></span> 
-&nbsp;<span><a href="/term/mashiroiro-symphony">Mashiroiro Symphony</a></span> 
-&nbsp;<span><a href="/term/raanjhana-dialogue">Raanjhana Dialogue</a></span> 
-&nbsp;<span><a href="/term/beast-fiction-live">Beast Fiction Live</a></span> 
-&nbsp;<span><a href="/term/satara-mein-khoon-episode-1009-12-october-2013">Satara Mein Khoon Episode 1009 12 October 2013</a></span> 
-&nbsp;<span><a href="/term/parvat-ke-kava-ve">Parvat Ke Kava Ve</a></span> 
-&nbsp;<span><a href="/term/saivya-ve-tu-itna-batadey">Saivya Ve Tu Itna Batadey</a></span> 
+<p>&nbsp;<span><a href="/term/paul-f-cowlan">Paul F Cowlan</a></span> 
+&nbsp;<span><a href="/term/eunhyuk-injection">Eunhyuk Injection</a></span> 
+&nbsp;<span><a href="/term/deewana-chhora-gujjar-ka">Deewana Chhora Gujjar Ka</a></span> 
+&nbsp;<span><a href="/term/capricorn-walking">Capricorn Walking</a></span> 
+&nbsp;<span><a href="/term/cat-and-mouse-the-red-jumpsuit-apparatus">Cat And Mouse The Red Jumpsuit Apparatus</a></span> 
+&nbsp;<span><a href="/term/capricorn">Capricorn</a></span> 
+&nbsp;<span><a href="/term/stellar-marionete">Stellar Marionete</a></span> 
+&nbsp;<span><a href="/term/mai-pyar-to-vadh-tenu-pyar-kara">Mai Pyar To Vadh Tenu Pyar Kara </a></span> 
+&nbsp;<span><a href="/term/martin-garrix-firebeatz-helicopter">Martin Garrix  Firebeatz  Helicopter </a></span> 
+&nbsp;<span><a href="/term/spica-you-dont-live-me">Spica You Dont Live Me</a></span> 
+&nbsp;<span><a href="/term/john-cena-vs-rock-wrestling">John Cena Vs Rock Wrestling </a></span> 
+&nbsp;<span><a href="/term/aasmanon-pay-likha-episode-23">Aasmanon Pay Likha Episode 23</a></span> 
+&nbsp;<span><a href="/term/snsd-world-macau-funny-edit">Snsd World Macau Funny Edit</a></span> 
+&nbsp;<span><a href="/term/chhora-gujjar-ka-haryanvi">Chhora Gujjar Ka Haryanvi</a></span> 
+&nbsp;<span><a href="/term/eunhyuk-monkey-dance">Eunhyuk Monkey Dance</a></span> 
+&nbsp;<span><a href="/term/wwe-rock-vs-john-cena-wrestling">Wwe Rock Vs John Cena Wrestling</a></span> 
+&nbsp;<span><a href="/term/leeteuk-busy-with-his-cake">Leeteuk Busy With His Cake</a></span> 
+&nbsp;<span><a href="/term/r3hab-samurai-go-hard">R3hab  Samurai Go Hard </a></span> 
+&nbsp;<span><a href="/term/lagi-re-lagan-sai-tere-naam-ki-nooran-sister">Lagi Re Lagan Sai Tere Naam Ki Nooran Sister</a></span> 
+&nbsp;<span><a href="/term/speed-why-im-not-mv">Speed Why Im Not Mv</a></span> 
+&nbsp;<span><a href="/term/speed-why-im-not">Speed Why Im Not</a></span> 
+&nbsp;<span><a href="/term/eunhyuk-dance-so-cold-beat-it">Eunhyuk Dance So Cold Beat It</a></span> 
+&nbsp;<span><a href="/term/suzy-in-after-school-club">Suzy In After School Club</a></span> 
+&nbsp;<span><a href="/term/latest-malayalam-dj-songs">Latest Malayalam Dj Songs</a></span> 
+&nbsp;<span><a href="/term/saraswatichandra-14-feb-pt-3">Saraswatichandra 14 Feb Pt 3</a></span> 
+&nbsp;<span><a href="/term/crazymix-bassilyo-vs-frooz-elbiz">Crazymix Bassilyo Vs Frooz Elbiz</a></span> 
+&nbsp;<span><a href="/term/suzy-and-junho-way-back-into-love">Suzy And Junho Way Back Into Love</a></span> 
+&nbsp;<span><a href="/term/gym-khana-ken-block">Gym Khana Ken Block</a></span> 
+&nbsp;<span><a href="/term/mankirt-aulakh-kaka-ji-mp3-song">Mankirt Aulakh Kaka Ji Mp3 Song</a></span> 
+&nbsp;<span><a href="/term/saraswatichandra-title-track">Saraswatichandra Title Track</a></span> 
+&nbsp;<span><a href="/term/mad-in-india">Mad In India</a></span> 
+&nbsp;<span><a href="/term/fx-nu-abo-may">Fx Nu Abo May</a></span> 
+&nbsp;<span><a href="/term/en-anbe-en-anbe-karaoke">En Anbe En Anbe Karaoke</a></span> 
+&nbsp;<span><a href="/term/group-photo-jagtar-brar">Group Photo Jagtar Brar</a></span> 
+&nbsp;<span><a href="/term/nu-abo-fx-dance">Nu Abo Fx Dance</a></span> 
+&nbsp;<span><a href="/term/eunhyuk-ceci">Eunhyuk Ceci</a></span> 
+&nbsp;<span><a href="/term/snsdi-got-a-boy">Snsdi Got A Boy</a></span> 
+&nbsp;<span><a href="/term/ceci-magazine">Ceci Magazine</a></span> 
+&nbsp;<span><a href="/term/2011-ceci-magazine-mini-drama-with-super-junior">2011 CeCi Magazine Mini Drama With Super Junior </a></span> 
+&nbsp;<span><a href="/term/taylor-swift-fashion">Taylor Swift Fashion</a></span> 
+&nbsp;<span><a href="/term/king-bayaa-ekat-em-yawa-a-talk-with-my-ancestors">King Bayaa  Ekat Em Yawa A Talk With My Ancestors </a></span> 
+&nbsp;<span><a href="/term/eunhyuk-shirtless">Eunhyuk Shirtless</a></span> 
+&nbsp;<span><a href="/term/i-got-a-boy-mv">I Got A Boy Mv</a></span> 
+&nbsp;<span><a href="/term/super-junior-ceci-magazine">Super Junior Ceci Magazine</a></span> 
+&nbsp;<span><a href="/term/funny-fashion">Funny Fashion</a></span> 
+&nbsp;<span><a href="/term/bahut-khoob-ep-35">BAHUT KHOOB EP 35</a></span> 
+&nbsp;<span><a href="/term/ranveer-singh-rapping-at-gima-2014-a-awards">Ranveer Singh Rapping At Gima 2014 A Awards </a></span> 
+&nbsp;<span><a href="/term/love-scenes-of-rajveer-and-nandani-by-desh-ki-beti-nandani-s">Love Scenes Of Rajveer And Nandani By Desh Ki Beti Nandani Sony Tv</a></span> 
+&nbsp;<span><a href="/term/ranveer-singh-rapping-at-gima-awards-aarti-un-hi-chalegi">Ranveer Singh Rapping At Gima Awards Aarti Un Hi Chalegi</a></span> 
+&nbsp;<span><a href="/term/full-eng-sub-exo-showtime-ep-12">Full Eng Sub Exo Showtime Ep 12</a></span> 
 </p>
 <div style="clear:both"></div>
 </div>  
